etc/envoy-local.yaml
node:
  id: router~127.0.0.1~TODO_ID~TO_DOMAIN
  cluster: cluster

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

dynamic_resources:
  cds_config:
    api_config_source:
      api_type: DELTA_GRPC
      transport_api_version: V3
      grpc_services:
      - envoy_grpc:
          cluster_name: cds_server

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  # The LDS configuration set the path of Go shared library.
                  # The name of plugin_name is registered in the ./cmd/libgolang/main.go.
                  # The value of library_id is not used yet.
                  - name: htnn.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: fm
                      library_path: /usr/local/envoy/libgolang.so
                      plugin_name: fm
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster_header: "Cluster-Name"
                            retry_policy:
                              retry_on: "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes"
                              num_retries: 1
                              retriable_status_codes: [503]
                          typed_per_filter_config:
                            # The RDS configuration set the per-route configuration.
                            # Each plugin is run in the order specified under the field 'plugins'.
                            htnn.filters.http.golang:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.ConfigsPerRoute
                              plugins_config:
                                fm:
                                  config:
                                    "@type": type.googleapis.com/xds.type.v3.TypedStruct
                                    value:
                                      plugins:
                                        - name: llmproxy
                                          config:
                                            protocol: openai
                                            algorithm: inference_lb
                                            model_mapping_rule:
                                              deepseek/deepseek-v3-0324:
                                                rules:
                                                  - backend: sglang
                                                    cluster: qwen3.service
                                            lb_mapping_rule:
                                              deepseek/deepseek-v3-0324:
                                                load_aware_enable: true
                                                cache_aware_enable: true
                                                candidate_percent: 50
                                                request_load_weight: 1
                                                prefill_load_weight: 3
                                                cache_radio_weight: 0
                                                consistent_hash_weight: 1.5
                                            log:
                                              enabled: false

    - name: listener_backend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
              - name: direct_response
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                  direct_response:
                    status: 200
                    body:
                      inline_string: |
                        {"id":"chatcmpl-B9MBs8CjcvOU2jLn4n570S5qMJKcT","object":"chat.completion","created":1741569952,"model":"qwen3","choices":[{"index":0,"message":{"role":"assistant","content":"Hello! How can I assist you today?","refusal":null,"annotations":[]},"logprobs":null,"finish_reason":"stop"}],"usage":{"prompt_tokens":19,"completion_tokens":10,"total_tokens":29,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_token [...]
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: cds_server
    type: STATIC
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9999
